# ollama-rs

./: Cargo.toml  README.md  justfile
api-client/: Cargo.toml
api-client/src/: lib.rs
api-client/src/chat/: mod.rs
api-client/src/copy/: mod.rs
api-client/src/create/: mod.rs
api-client/src/generate/: mod.rs
api-client/src/show/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
